# volume-bot

./: .gitignore  README.md  pyproject.toml  test_frontend.py  test_ws.py
bot/: __init__.py  main.py
bot/connectors/: base.py  binance.py
bot/data/: __init__.py  order_book.py  stream.py
bot/execution/: __init__.py  order_manager.py  websocket_server.py
bot/frontend/: dashboard.py
bot/risk/: __init__.py  risk_manager.py
bot/strategy/: __init__.py  inventory.py  market_maker.py  pnl_tracker.py  pricing.py
bot/utils/: __init__.py  logger.py  metrics.py
scripts/: backtest.py  run_bot.py
